--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style type="text/css">
-      * { font-family: 'Inter', sans-serif; }
+      * { font-family: 'Inter', sans-serif; outline: none !important; }
     </style>
   </head>
   <body class="bg-gray-200 text-gray-600 leading-relaxed">
@@ -24,15 +24,20 @@
     <!-- Jumbotron -->
     <section class="w-full bg-white flex flex-col items-center justify-center">
       <!-- Container -->
-      <div class="w-full max-w-4xl px-8 md:py-32">
-        <h1 class="font-bold text-6xl text-black mb-2">Beautiful FOSS!</h2>
-        <span class="text-lg font-medium">
-          A Github repository template to make your repositories beautiful in minutes.
-        </span>
-        <div class="flex flex-row items-center mt-4">
-          <button class="font-semibold text-white bg-blue-600 py-2 px-4 rounded shadow-sm">Get started</button>
-          <span class="font-semibold mx-4">Or</span>
-          <iframe src="https://ghbtns.com/github-btn.html?user=Neutron-Creative&repo=Beautiful-FOSS&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+      <div class="w-full max-w-5xl px-8 md:py-32">
+        <h1 class="text-gray-900 text-6xl lg:text-7xl font-extrabold mb-8">Beautiful FOSS!</h2>
+        <p class="text-xl lg:text-2xl font-medium">
+          A Github repository template to make your repositories <span class="text-black font-semibold">beautiful in minutes.</span>
+        </p>
+        <div class="flex flex-col md:flex-row items-center mt-10 space-x-4">
+          <button class="w-full md:w-auto font-semibold text-white bg-gray-900 py-3 px-6 rounded-xl">Get started</button>
+          <div class="flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
+            <span>$</span>
+            <span class="text-gray-900">git clone https://github.com/Neutron-Creative/Beautiful-FOSS.git</span>
+          </div>
+          <!-- Github star count
+            <iframe src="https://ghbtns.com/github-btn.html?user=Neutron-Creative&repo=Beautiful-FOSS&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
+          -->
         </div>
       </div>
     </section>
