--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,24 @@
 <html>
   <head>
-    <title>Beautiful FOSS!</title>
+    <!-- Primary Meta Tags -->
+    <title>Beautiful FOSS! - The ultimate repository boilerplate</title>
+    <meta name="title" content="Beautiful FOSS! - The ultimate repository boilerplate">
+    <meta name="description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://foss.neutron.so/">
+    <meta property="og:title" content="Beautiful FOSS! - The ultimate repository boilerplate">
+    <meta property="og:description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
+    <meta property="og:image" content="/assets/Beautiful-FOSS-Hero.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://foss.neutron.so/">
+    <meta property="twitter:title" content="Beautiful FOSS! - The ultimate repository boilerplate">
+    <meta property="twitter:description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
+    <meta property="twitter:image" content="/assets/Beautiful-FOSS-Hero.png">
+
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
