Refactor meta images on www

--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
     <meta property="og:url" content="https://foss.neutron.so/">
     <meta property="og:title" content="Beautiful FOSS! - The ultimate repository boilerplate">
     <meta property="og:description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
-    <meta property="og:image" content="/assets/Beautiful-FOSS-Hero.png">
+    <meta property="og:image" content="https://foss.neutron.so/assets/Beautiful-FOSS-Hero.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://foss.neutron.so/">
     <meta property="twitter:title" content="Beautiful FOSS! - The ultimate repository boilerplate">
     <meta property="twitter:description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
-    <meta property="twitter:image" content="/assets/Beautiful-FOSS-Hero.png">
+    <meta property="twitter:image" content="https://foss.neutron.so/assets/Beautiful-FOSS-Hero.png">
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
