Add mobile viewport support to www

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,9 @@
     <meta property="twitter:title" content="Beautiful FOSS! - The ultimate repository boilerplate">
     <meta property="twitter:description" content="A GitHub repository boilerplate to make your repositories beautiful & discoverable in minutes.">
     <meta property="twitter:image" content="https://foss.neutron.so/assets/Beautiful-FOSS-Hero.png">
+    
+    <!-- Responsive device support -->>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
