--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
       .terminal, .terminal * { font-family: 'Roboto Mono', 'Inter', sans-serif !important; }
       .social-mark { opacity: .5; width:20px; height: auto; }
       .social-mark:hover { opacity: 1; }
-      html, body { width: 100vw; height: auto; min-height: 100vh; }
+      html, body { width: 100vw; height: auto; min-height: 100vh; margin: 0; padding: 0; overflow-x: hidden; }
     </style>
   </head>
   <body class="w-screen min-h-screen h-auto text-gray-500 leading-relaxed">
@@ -162,7 +162,7 @@
         <h2 class="text-lg tracking-wide font-semibold text-blue-600 uppercase mb-3">Forever free</h2>
         <h3 class="text-6xl text-gray-900 font-extrabold mb-8">100% free, no catch.</h3>
         <p class="text-2xl leading-relaxed font-medium mb-10">The best part about Beautiful FOSS is there's no excuse not to use it - it's entirely free! Licensed via LGPL, you're free to use this in your project and modify however you need without paying a dime.</p>
-        <div class="flex flex-col md:flex-row items-center space-x-4 w-full items-center justify-center">
+        <div class="flex flex-col md:flex-row items-center space-x-4 w-full items-center justify-center md:justify-start">
           <a href="https://github.com/Neutron-Creative/Beautiful-FOSS" class="text-center w-full md:w-auto font-semibold text-white bg-blue-600 hover:bg-blue-500  py-3 px-6 rounded-xl">Get started</a>
           <div class="terminal hidden md:flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
             <span>$</span>
