--- a/www/sign-up.html
+++ b/www/sign-up.html
@@ -36,17 +36,17 @@
   </head>
   <body class="w-screen min-h-screen h-auto text-gray-500 leading-relaxed">
     <!-- Announcement banner -->
-    <a href="https://neutroncreative.com" class="flex flex-row items-center justify-center p-4 md:p-2 bg-white border border-x-0 border-top-0 border-gray-100">
+    <div class="flex flex-row items-center justify-center p-4 md:p-2 bg-white border border-x-0 border-top-0 border-gray-100">
       <span class="flex flex-row text-xs md:text-sm font-semibold text-center items-center justify-center">
         <!-- If exciting -->
         <!-- <span class="flex mr-2 md:hidden">🎉</span> -->
-        Beautiful FOSS is provided free in our mission to make the world open-source.
+        Beatiful FOSS is provided free in our mission to make the world open-source.
         <!-- If exciting -->
         <!-- <span class="flex md:hidden ml-2">🎉</span> -->
       </span>
       <span class="hidden md:flex mx-4 text-xs text-gray-400">|</span>
-      <span class="hidden md:flex text-xs md:text-sm font-semibold">Learn more 👉</span>
-    </a>
+      <a class="hidden md:flex text-xs md:text-sm font-semibold" href="https://neutroncreative.com">Learn more 👉</a>
+    </div>
     <!-- Jumbotron -->
     <section class="w-full flex flex-col items-center justify-center">
       <!-- Container -->
@@ -56,11 +56,11 @@
           A Github repository template to make your repositories <span class="text-black font-semibold">beautiful in minutes.</span>
         </p>
         <div class="flex flex-col md:flex-row items-center mt-10 space-x-4 w-full md:justify-center">
-          <a href="https://www.producthunt.com/upcoming/beautiful-foss" class="text-lg w-full text-center md:w-auto font-semibold text-white bg-blue-600 hover:bg-blue-500  py-4 px-8 rounded-xl">Join the waitlist</a>
-          <!-- <div class="hidden terminal md:flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
+          <a href="https://github.com/Neutron-Creative/Beautiful-FOSS" class="w-full text-center md:w-auto font-semibold text-white bg-blue-600 hover:bg-blue-500  py-3 px-6 rounded-xl">Get started</a>
+          <div class="hidden terminal md:flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
             <span>$</span>
             <span class="text-gray-900">git clone https://github.com/Neutron-Creative/Beautiful-FOSS.git</span>
-          </div>-->
+          </div>
           <!-- Github star count
             <iframe src="https://ghbtns.com/github-btn.html?user=Neutron-Creative&repo=Beautiful-FOSS&type=star&count=true&size=large" frameborder="0" scrolling="0" width="170" height="30" title="GitHub"></iframe>
           -->
@@ -75,7 +75,7 @@
           Your repository needs a makeover.
         </h2>
         <p class="text-xl leading-relaxed font-medium mx-auto max-w-4xl">
-          The open-source community is contagious, but without the right resources to help others find & understand your project, it likely isn't getting the engagement it deserves. Beautiful FOSS makes it easier to understand your project with a high-quality readme file, get found online with an SEO optimized landing page, and promote your project with our archive of self-promotion links.
+          The open-source community is passionate &amp; contagious, but often projects are left not getting the attention &amp; virality they deserve due to a low-quality marketing assets that leave consumers no way to find, understand, and share your project. With Beautiful FOSS, we make creating these assets simple and easy so you can build your project with confidence.
         </p>
       </div>
     </section>
@@ -88,10 +88,10 @@
           Icons
           <div class="w-12 h-12 rounded-xl bg-indigo-600 mb-8"></div>
         -->
-        <h2 class="text-lg tracking-wide font-semibold text-indigo-600 uppercase mb-3">Quality Readme's</h2>
-        <h3 class="text-6xl text-gray-900 font-extrabold mb-8">Memorable & understood</h3>
+        <h2 class="text-lg tracking-wide font-semibold text-indigo-600 uppercase mb-3">Stylish Readme's</h2>
+        <h3 class="text-6xl text-gray-900 font-extrabold mb-8">Beautify your Github</h3>
         <p class="text-2xl leading-relaxed font-medium mb-6">
-          A simple, thorough, and well-branded readme will help users understand your project and prevent it from slipping through the cracks of Github.
+          A beautiful &amp; well branded readme file will hook users in &amp; help them understand what they're looking at and how to use it.
         </p>
         </div>
         <!-- Readme example -->
@@ -140,7 +140,7 @@
           -->
           <h2 class="text-lg tracking-wide font-semibold text-pink-600 uppercase mb-3">Enhanced SEO &amp; Previews</h2>
           <h3 class="text-6xl text-gray-900 font-extrabold mb-8">Get found online</h3>
-          <p class="text-2xl leading-relaxed font-medium mb-6">Without an SEO optimized website & open-graph previews, you're left stranded with no way to find your project or share it on social media. With Beautiful FOSS, generate these assets to get found & get more shares in minutes!</p>
+          <p class="text-2xl leading-relaxed font-medium mb-6">Without a landing page, quality SEO, and open graph previews, you're missing out on potential users. Beautiful FOSS makes generating these easy!</p>
         </div>
         <!-- Floating preview -->
         <a href="https://singlelink.co" class="hidden md:flex w-1/3 bg-gray-100 rounded-xl border border-r-0 border-t-0 border-b-0 border-l-2 border-gray-200 ml-auto p-3 flex-col shadow-lg cursor-pointer transform transform-gpu" style="transform:perspective(1040px) rotate(0) rotateX(2deg) rotateY(-12deg) translateZ(-10px) scale(1.05);">
@@ -163,11 +163,11 @@
         <h3 class="text-6xl text-gray-900 font-extrabold mb-8">100% free, no catch.</h3>
         <p class="text-2xl leading-relaxed font-medium mb-10">The best part about Beautiful FOSS is there's no excuse not to use it - it's entirely free! Licensed via LGPL, you're free to use this in your project and modify however you need without paying a dime.</p>
         <div class="flex flex-col md:flex-row items-center space-x-4 w-full items-center justify-center md:justify-start">
-          <a href="https://www.producthunt.com/upcoming/beautiful-foss" class="text-lg text-center w-full md:w-auto font-semibold text-white bg-blue-600 hover:bg-blue-500  py-4 px-8 rounded-xl">Join the waitlist</a>
-          <!--<div class="terminal hidden md:flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
+          <a href="https://github.com/Neutron-Creative/Beautiful-FOSS" class="text-center w-full md:w-auto font-semibold text-white bg-blue-600 hover:bg-blue-500  py-3 px-6 rounded-xl">Get started</a>
+          <div class="terminal hidden md:flex flex-none bg-gray-50 text-gray-400 hover:text-gray-900 rounded-xl items-center justify-center space-x-2 px-6 py-3 border border-gray-200 w-full md:w-auto">
             <span>$</span>
             <span class="text-gray-700">git clone https://github.com/Neutron-Creative/Beautiful-FOSS.git</span>
-          </div>-->
+          </div>
         </div>
       </div>
     </section>
